--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button id="clear-btn" class="button">Clear</button>
     <div class="mybox">
          <div id="container"></div>
     </div>
